[gd_scene load_steps=9 format=3 uid="uid://b603832vfsa4b"]

[ext_resource type="Texture2D" uid="uid://ddinrkbpewf21" path="res://assets/bg/default.jpg" id="1_10tf3"]
[ext_resource type="Script" uid="uid://bg1hprcxlcuix" path="res://scripts/notes.gd" id="1_xggly"]
[ext_resource type="Theme" uid="uid://cf5g8h6mhp6iu" path="res://assets/font/font.tres" id="2_xggly"]
[ext_resource type="Texture2D" uid="uid://ciq8xo1500qvf" path="res://assets/ui/note.png" id="3_uqv21"]
[ext_resource type="Script" uid="uid://dkk6iu66ynto0" path="res://scripts/scene_button.gd" id="4_s6x0h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sa1nr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nsn71"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_flqah"]

[node name="Notes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xggly")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_right = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_10tf3")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 432.0
offset_top = 72.0
offset_right = 848.0
offset_bottom = 360.0
texture = ExtResource("3_uqv21")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Padding" type="FlowContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_xggly")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Notes"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemList" type="ItemList" parent="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
select_mode = 2
auto_height = true
item_count = 2
item_0/text = "Experiment A"
item_1/text = "Experiment B"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2
size_flags_horizontal = 3

[node name="Edit" type="TextEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_xggly")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_sa1nr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nsn71")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_flqah")
placeholder_text = "Write whatever you want here!"
scroll_smooth = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Back" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(192, 64)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_xggly")
text = "Back"
script = ExtResource("4_s6x0h")
back_button = true
metadata/_custom_type_script = "uid://dkk6iu66ynto0"

[connection signal="item_clicked" from="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Edit" to="." method="_on_edit_text_changed"]
[connection signal="changed_scene" from="VBoxContainer/VBoxContainer/HBoxContainer2/Back" to="." method="_on_back_changed_scene"]
